    * Troves now don't require dependencies that are provided by themselves.
      As troves are built with this new behavior, it should significantly speed
      up dependency resolution.
    * added a script to recalculate the sha1s on a server (after a label
      rename, for instance)
    * added a script to calculate an md5 password (for use in an info recipe,
      for example)

  o Bug Fixes:
    * command-line configurations now override context settings

Changes in 1.0.10:
  o Client Changes
    * Given a system based on rPath linux where you only installed
      !smp kernels, conary would eventually start installing smp
      kernels on your system, due to the way the update algorithm
      would determine whether you should install a newly available
      trove.  Conary now respects flavor affinity in this case and
      does not install the smp kernel.
    * Mirror configuration files can now specify uploadRateLimit and
      downloadRateLimit.
    * Updates utilizing changeset files are now split into multiple
      jobs properly, allowing changeset files which create users to
      work proprely.
    * "conary rollback" now displays progress information that matches
      the "conary update" progress information.
    * added --with-sources option for clone

  o Bug Fixes:
    * A bug that caused an assertion error when switching from an
      incomplete trove to a complete trove has been fixed.
    * A bug in perl dependencies that caused extra directories to be
      considered part of the dependency has been fixed.
    * A bug affecting updates where a pinned, partially installed
      package was supposed to be updated due to dependency resolution
      has been fixed.
    * A bug that prevented updates from working when part of a locally
      cooked package was replaced with a non-locally cooked component
      has been fixed.  The bug was introduced in Conary 1.0.8.
    * A bug that caused a segfault when providing an invalid type to